@@ -1,6 +1,7 @@
 version 0.77.11
 	--model ( buggy )
 	--nowarnings
+	--device ( buggy )
 
 version 0.77.10 ( 2012-04-15 )
 	Precisier delay handling
